#32 fix tests