@@ -6,7 +6,6 @@ import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.mockito.Mockito.*;
 
 import com.studyplanner.client.OisClient;
-import com.studyplanner.dto.CourseResponse;
 import com.studyplanner.entity.SemesterType;
 import java.util.List;
 import java.util.Map;
@@ -26,16 +25,16 @@ public class CourseServiceTest {
   void getAllCoursesTest() {
     when(oisClient.getAllCourses(1, 300, "Kursus", null))
         .thenReturn(List.of(aClientCourseResponse()));
-    when(oisClient.getAllCourseVersions(List.of(AN_LATEST_VERSION_UUID)))
+    when(oisClient.getAllCourseVersions(List.of(A_LATEST_VERSION_UUID)))
         .thenReturn(Map.of(A_COURSE_UUID, List.of(aClientVersionResponse())));
 
     var actual = courseService.getAllCourses(1, 300, "Kursus", null);
-    var first = actual.get(0);
+    var first = actual.getFirst();
 
     assertAll(
         "course response",
-        () -> assertThat(first.titleEn()).isEqualTo(A_COURSE_TITLE_EN),
-        () -> assertThat(first.titleEt()).isEqualTo(A_COURSE_TITLE_ET),
+        () -> assertThat(first.titleEn()).isEqualTo(A_TITLE_EN),
+        () -> assertThat(first.titleEt()).isEqualTo(A_TITLE_ET),
         () -> assertThat(first.credits()).isEqualTo(6.0),
         () -> assertThat(first.semesterType()).isEqualTo(SemesterType.SPRING));
   }
@@ -43,10 +42,10 @@ public class CourseServiceTest {
   @Test
   void getAllCourses_whenNoVersions_returnsCourseWithEmptySemesters() {
     when(oisClient.getAllCourses(1, 5, null, null)).thenReturn(List.of(aClientCourseResponse()));
-    when(oisClient.getAllCourseVersions(List.of(AN_LATEST_VERSION_UUID))).thenReturn(Map.of());
+    when(oisClient.getAllCourseVersions(List.of(A_LATEST_VERSION_UUID))).thenReturn(Map.of());
 
     var result = courseService.getAllCourses(1, 5, null, null);
 
-    assertThat(result.get(0).semesterType()).isNull();
+    assertThat(result.getFirst().semesterType()).isNull();
   }
 }
